--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </header>
 
 <nav>
-    <a href="index.html">Home</a>
+    <a href="D:\New folder\index.html.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
 </nav>
@@ -79,25 +79,32 @@
 <div class="container">
     <h2>Recipes</h2>
     <div class="recipe-list">
+        <!-- Recipe 1: Spaghetti Aglio e Olio -->
         <div class="recipe-card">
-            <a href="recipe1.html">
-                <img src="recipe1.jpg" alt="Recipe 1">
-                <h3>Recipe 1</h3>
+            <a href="D:\New folder\recipe1.html.html">
+                <img src="D:\New folder\recipe1.jpg.jpg" alt="Spaghetti Aglio e Olio">
+                <h3>Spaghetti Aglio e Olio</h3>
             </a>
+            <p>Classic Italian pasta with garlic, olive oil, and chili flakes.</p>
         </div>
+
+        <!-- Recipe 2: Avocado Toast -->
         <div class="recipe-card">
-            <a href="recipe2.html">
-                <img src="recipe2.jpg" alt="Recipe 2">
-                <h3>Recipe 2</h3>
+            <a href="D:\New folder\recipe2.html.html">
+                <img src="D:\New folder\recipe2.jpg.webp" alt="Avocado Toast">
+                <h3>Avocado Toast</h3>
             </a>
+            <p>Healthy and delicious avocado on toasted bread, perfect for breakfast.</p>
         </div>
+
+        <!-- Recipe 3: Chocolate Chip Cookies -->
         <div class="recipe-card">
-            <a href="recipe3.html">
-                <img src="recipe3.jpg" alt="Recipe 3">
-                <h3>Recipe 3</h3>
+            <a href="D:\New folder\recipe3.html.html">
+                <img src="D:\New folder\recipe3.jpg.jpg" alt="Chocolate Chip Cookies">
+                <h3>Chocolate Chip Cookies</h3>
             </a>
+            <p>Soft, chewy, and loaded with chocolate chips for a sweet treat!</p>
         </div>
-        <!-- Add more recipes as needed -->
     </div>
 </div>
 
