--- a/recipe1.html
+++ b/recipe1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe 1 - My Cookbook</title>
+    <title>Spaghetti Aglio e Olio - Recipe</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,37 +17,21 @@
             text-align: center;
             padding: 1em 0;
         }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-        }
-        nav a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-        nav a:hover {
-            background-color: #555;
-        }
         .container {
             padding: 20px;
         }
-        .recipe-image {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .recipe-image img {
-            max-width: 100%;
-            border-radius: 8px;
-        }
-        .recipe-details h2 {
+        h2 {
             color: #ff6347;
-            margin-bottom: 15px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
         }
         .ingredients, .instructions {
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         footer {
             text-align: center;
@@ -61,43 +45,28 @@
 <body>
 
 <header>
-    <h1>Recipe 1</h1>
+    <h1>Spaghetti Aglio e Olio</h1>
 </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-</nav>
-
 <div class="container">
-    <div class="recipe-image">
-        <img src="recipe1.jpg" alt="Recipe 1 Image">
-    </div>
-    <div class="recipe-details">
-        <h2>Recipe 1 Title</h2>
-        <p>A short description of the recipe.</p>
+    <h2>Ingredients</h2>
+    <ul class="ingredients">
+        <li>200g spaghetti</li>
+        <li>4 garlic cloves, thinly sliced</li>
+        <li>1/4 cup olive oil</li>
+        <li>1/2 teaspoon red pepper flakes</li>
+        <li>Salt, to taste</li>
+        <li>Fresh parsley, chopped (optional)</li>
+    </ul>
 
-        <div class="ingredients">
-            <h3>Ingredients:</h3>
-            <ul>
-                <li>1 cup of ingredient 1</li>
-                <li>2 tbsp of ingredient 2</li>
-                <li>1 tsp of ingredient 3</li>
-                <!-- Add more ingredients as needed -->
-            </ul>
-        </div>
-
-        <div class="instructions">
-            <h3>Instructions:</h3>
-            <ol>
-                <li>Step 1: Do this.</li>
-                <li>Step 2: Do that.</li>
-                <li>Step 3: Finish it off with this.</li>
-                <!-- Add more steps as needed -->
-            </ol>
-        </div>
-    </div>
+    <h2>Instructions</h2>
+    <ol class="instructions">
+        <li>Cook spaghetti according to package instructions. Drain and set aside, reserving 1/2 cup of pasta water.</li>
+        <li>Heat olive oil in a pan over medium heat. Add garlic and sauté until golden brown, about 2 minutes.</li>
+        <li>Add red pepper flakes and a pinch of salt, then toss in the cooked spaghetti.</li>
+        <li>Mix well, adding pasta water a little at a time if necessary to make a silky sauce.</li>
+        <li>Garnish with fresh parsley (optional) and serve hot.</li>
+    </ol>
 </div>
 
 <footer>
