--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 </header>
 
 <nav>
-    <a href="D:\New folder\index.html.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
 </nav>
