--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Recipe 1: Spaghetti Aglio e Olio -->
         <div class="recipe-card">
             <a href=recipe1.html>
-                <img src="D:\New folder\recipe1.jpg.jpg" alt="Spaghetti Aglio e Olio">
+                <img src=recipe1.jpg.jpg alt="Spaghetti Aglio e Olio">
                 <h3>Spaghetti Aglio e Olio</h3>
             </a>
             <p>Classic Italian pasta with garlic, olive oil, and chili flakes.</p>
@@ -91,7 +91,7 @@
         <!-- Recipe 2: Avocado Toast -->
         <div class="recipe-card">
             <a href=recipe2.html>
-                <img src="D:\New folder\recipe2.jpg.webp" alt="Avocado Toast">
+                <img src=recipe2.jpg.webp alt="Avocado Toast">
                 <h3>Avocado Toast</h3>
             </a>
             <p>Healthy and delicious avocado on toasted bread, perfect for breakfast.</p>
@@ -100,7 +100,7 @@
         <!-- Recipe 3: Chocolate Chip Cookies -->
         <div class="recipe-card">
             <a href=recipe3.html>
-                <img src="D:\New folder\recipe3.jpg.jpg" alt="Chocolate Chip Cookies">
+                <img src=recipe3.jpg.jpg alt="Chocolate Chip Cookies">
                 <h3>Chocolate Chip Cookies</h3>
             </a>
             <p>Soft, chewy, and loaded with chocolate chips for a sweet treat!</p>
