--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
             <p>Every recipe I share on this site is tried, tested, and tweaked to perfection. I strive to make cooking as simple and enjoyable as possible, so you can spend less time stressing over complicated instructions and more time savoring delicious food!</p>
         </div>
         <div class="about-image">
-            <img src=my cookbook alt="Cooking image">
+            <img src=my cookbook.jpeg alt="Cooking image">
         </div>
     </div>
 
