--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #ff6347;
+            background-color: #43a047;
             color: white;
             text-align: center;
             padding: 1em 0;
@@ -20,7 +20,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background-color: #aed581;
         }
         nav a {
             color: white;
@@ -29,14 +29,14 @@
             text-align: center;
         }
         nav a:hover {
-            background-color: #555;
+            background-color: #689f38;
         }
         .container {
             padding: 20px;
         }
         .recipe-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
             gap: 20px;
         }
         .recipe-card {
@@ -46,23 +46,20 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
+        .recipe-card img {
+            max-width: 100%;
+            border-radius: 8px;
         }
-    .recipe-card img {
-        width: 200px; /* Set uniform width */
-        height: 200px; /* Set uniform height */
-        object-fit: cover; /* Fit image without distortion */
-        border-radius: 8px; /* Maintain rounded corners */
-    }
         .recipe-card h3 {
             margin: 15px 0 10px;
-            color: #ff6347;
+            color: 3f51b5;
         }
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #333;
+            padding: 05px;
+            background-color: #263238;
             color: white;
-            margin-top: 20px;
+            margin-top: 360px;
         }
     </style>
 </head>
@@ -84,8 +81,8 @@
     <div class="recipe-list">
         <!-- Recipe 1: Spaghetti Aglio e Olio -->
         <div class="recipe-card">
-            <a href=recipe1.html>
-                <img src=recipe1.jpg.jpg alt="Spaghetti Aglio e Olio">
+            <a href="D:\New folder\recipe1.html.html">
+                <img src=recipe1..jpg alt="Spaghetti Aglio e Olio">
                 <h3>Spaghetti Aglio e Olio</h3>
             </a>
             <p>Classic Italian pasta with garlic, olive oil, and chili flakes.</p>
@@ -93,8 +90,8 @@
 
         <!-- Recipe 2: Avocado Toast -->
         <div class="recipe-card">
-            <a href=recipe2.html>
-                <img src=recipe2.jpg.webp alt="Avocado Toast">
+            <a href="D:\New folder\recipe2.html.html">
+                <img src=recipe.2.jpg alt="Avocado Toast">
                 <h3>Avocado Toast</h3>
             </a>
             <p>Healthy and delicious avocado on toasted bread, perfect for breakfast.</p>
@@ -102,8 +99,8 @@
 
         <!-- Recipe 3: Chocolate Chip Cookies -->
         <div class="recipe-card">
-            <a href=recipe3.html>
-                <img src=recipe3.jpg.jpg alt="Chocolate Chip Cookies">
+            <a href="D:\New folder\recipe3.html.html">
+                <img src=recipe3..jpg alt="Chocolate Chip Cookies">
                 <h3>Chocolate Chip Cookies</h3>
             </a>
             <p>Soft, chewy, and loaded with chocolate chips for a sweet treat!</p>
