--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #ff6347;
+            background-color: #43a047;
             color: white;
             text-align: center;
             padding: 1em 0;
@@ -20,7 +20,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background-color: #aed581;
         }
         nav a {
             color: white;
@@ -29,7 +29,7 @@
             text-align: center;
         }
         nav a:hover {
-            background-color: #555;
+            background-color: #689f38;
         }
         .container {
             padding: 20px;
@@ -37,7 +37,7 @@
             margin: 0 auto;
         }
         h2 {
-            color: #ff6347;
+            color: #3f51b5;
         }
         .about-content {
             display: flex;
@@ -58,10 +58,10 @@
         }
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #333;
+            padding: 05px;
+            background-color: #263238;
             color: white;
-            margin-top: 20px;
+            margin-top: 360px;
         }
     </style>
 </head>
@@ -72,9 +72,9 @@
 </header>
 
 <nav>
-    <a href=index.html>Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href= index.html >Home</a>
+    <a href= about.html >About</a>
+    <a href= contact.html >Contact</a>
 </nav>
 
 <div class="container">
@@ -89,7 +89,7 @@
             <p>Every recipe I share on this site is tried, tested, and tweaked to perfection. I strive to make cooking as simple and enjoyable as possible, so you can spend less time stressing over complicated instructions and more time savoring delicious food!</p>
         </div>
         <div class="about-image">
-            <img src="my cookbook.jpeg" alt="Cooking image">
+            <img src="D:\New folder\my cookbook.jpeg" alt="Cooking image">
         </div>
     </div>
 
