--- a/recipe1.html
+++ b/recipe1.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #ff6347;
+            background-color: #f48fb1;
             color: white;
             text-align: center;
             padding: 1em 0;
@@ -21,7 +21,7 @@
             padding: 20px;
         }
         h2 {
-            color: #ff6347;
+            color: #2196f3;
         }
         ul {
             list-style-type: none;
@@ -35,10 +35,10 @@
         }
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #333;
+            padding: 05px;
+            background-color: #263238;
             color: white;
-            margin-top: 20px;
+            margin-top: 360px;
         }
     </style>
 </head>
