--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #ff6347;
+            background-color: #43a047;
             color: white;
             text-align: center;
             padding: 1em 0;
@@ -20,7 +20,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background-color: #aed581;
         }
         nav a {
             color: white;
@@ -29,7 +29,7 @@
             text-align: center;
         }
         nav a:hover {
-            background-color: #555;
+            background-color: #689f38;
         }
         .container {
             padding: 20px;
@@ -37,7 +37,7 @@
             margin: 0 auto;
         }
         h2 {
-            color: #ff6347;
+            color: #673ab7;
         }
         .contact-info {
             display: flex;
@@ -45,10 +45,10 @@
             margin-top: 20px;
         }
         .contact-info div {
-            width: 48%;
+            width: 50%;
         }
         .contact-info h3 {
-            color: #ff6347;
+            color: #43a047;
         }
         .contact-form {
             background-color: white;
@@ -61,10 +61,10 @@
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 8px;
         }
         .contact-form button {
-            background-color: #ff6347;
+            background-color: #43a047;
             color: white;
             padding: 10px 15px;
             border: none;
@@ -76,10 +76,10 @@
         }
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #333;
+            padding: 05px;
+            background-color: #263238;
             color: white;
-            margin-top: 20px;
+            margin-top: 360px;
         }
     </style>
 </head>
