--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="recipe-list">
         <!-- Recipe 1: Spaghetti Aglio e Olio -->
         <div class="recipe-card">
-            <a href="D:\New folder\recipe1.html.html">
+            <a href=recipe1.html>
                 <img src=recipe1..jpg alt="Spaghetti Aglio e Olio">
                 <h3>Spaghetti Aglio e Olio</h3>
             </a>
@@ -90,7 +90,7 @@
 
         <!-- Recipe 2: Avocado Toast -->
         <div class="recipe-card">
-            <a href="D:\New folder\recipe2.html.html">
+            <a href=recipe2.html>
                 <img src=recipe.2.jpg alt="Avocado Toast">
                 <h3>Avocado Toast</h3>
             </a>
@@ -99,7 +99,7 @@
 
         <!-- Recipe 3: Chocolate Chip Cookies -->
         <div class="recipe-card">
-            <a href="D:\New folder\recipe3.html.html">
+            <a href=recipe3.html>
                 <img src=recipe3..jpg alt="Chocolate Chip Cookies">
                 <h3>Chocolate Chip Cookies</h3>
             </a>
