--- a/contact.html
+++ b/contact.html
@@ -103,6 +103,10 @@
         <div>
             <h3>Phone Number</h3>
             <p>Call or text us at: <strong>01712625902</strong></p>
+            <p>Email: 
+            <a href="mailto: tabassumraisa68@gmail.com">
+            tabssumraisa68@gmail.com</a> 
+        </p>
         </div>
         <div>
             <h3>Contact Form</h3>
