--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
         <div>
             <h3>Phone Number</h3>
             <p>Call or text us at: <strong>01712625902</strong></p>
-            <p>Email: <a href="mailto:tabassumraisa68@gmail.com">tabassumtaba68@gmail.com</a></p>
+            <p>Email: <a href="mailto:tabassumraisa68@gmail.com">tabassumraisa68@gmail.com</a></p>
         </div>
         <div>
             <h3>Contact Form</h3>
